--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,19 +21,21 @@
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.0.26",
     "axios": "^1.5.1",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "focus-trap-react": "^10.2.2",
     "framer-motion": "^8.5.5",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "^0.288.0",
     "ms": "^2.1.3",
     "next": "13.5.5-canary.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "terra-api": "^1.4.2",
     "typescript": "5.2.2",
     "use-debounce": "^9.0.4",
